--- a/css/main.css
+++ b/css/main.css
@@ -3,17 +3,16 @@ html {
     
     background: url('https://i.imgur.com/Xg0T6Lq.jpeg');
     background-size: cover;
-    background-position: center; /* displays a better part of photo on screen*/
+    background-position: center; 
     height: 100%; /*stabalized image when game started*/
 } 
 
 body {
     display: flex;
     flex-direction: column;
-    /* justify-content: flex-end; */
-    align-items: center; /*centers horizon . does it take care for text too?*/
+    align-items: center; /*centers horizontally */
     gap: 50px;
-    background-color: rgba(0,0,0,0.3);
+    background-color: rgba(0,0,0,0.4);
 }
 
     @keyframes blink{
@@ -22,14 +21,14 @@ body {
         }
     }
 
-h1 {
-    color: white;
+h1 { 
+    color: #FFFFFF;
     font-size: 100px;
     animation: blink 1.5s linear infinite;
 }
 
 header {
-    color: red;
+    color: #FF0000;
     font-size: 50px;
     background-color: rgba(0,0,0,0.6);
 }
@@ -42,12 +41,9 @@ main {
     border-color: black;
 } 
 
-footer {
-    text-align: center;
-}
 
 #betting {
-    background-color: red;
-    color: white;
+    background-color: #FF0000;
+    color: #FFFFFF;
     font-size: 30px;
 }
